--- a/DQN Atari  Breakout -v0.ipynb
+++ b/DQN Atari  Breakout -v0.ipynb
@@ -1,11 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reinforcement learning problem of Atari  games\n",
+    "\n",
+    "Here we are trying to solve an Reinforcement learning problem of Atari games.\n",
+    "\n",
+    "We are trying to implement the paper of Human-level control through deep reinforcement\n",
+    "learning by \\textbf{Mnih et al., Nature, 2015}\n",
+    "We are using the OpenAI's  Breakout  enviroment for this problem.\n",
+    "\n",
+    "Data used: In this problem, the program learns from exploration and exploitation approach. This approach means the program tries to explore every once in a while and stores the data (precisely: Reward , values of state, actions ). Once sufficiently large data is collected, it will try to learn parameters from itself.\n",
+    " \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -17,6 +31,7 @@
     "import os\n",
     "import random\n",
     "import sys\n",
+    "import psutil\n",
     "import tensorflow as tf\n",
     "\n",
     "if \"../\" not in sys.path:\n",
@@ -24,6 +39,13 @@
     "\n",
     "from lib import plotting\n",
     "from collections import deque, namedtuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we add enviroment for our problem"
    ]
   },
   {
@@ -36,21 +58,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Atari Actions: 0 (noop), 1 (fire), 2 (left) and 3 (right) are valid actions\n",
-    "VALID_ACTIONS = [0, 1, 2, 3]"
+    "The actions are the directions that our cannon will move and perform actions like  firing the cannon "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the Actions:\n",
+    "# 0 : no-operation, 1:fire , 2: left, 3: right \n",
+    "\n",
+    "VALID_ACTIONS = [0, 1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An object of states is created here.\n",
+    "\n",
+    "The most important assumption here is the considered as the enviroment is Markov Decision Process. It means all the states of the enviroment are known to us."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class StateProcessor():\n",
@@ -77,6 +115,21 @@
     "            A processed [84, 84] state representing grayscale values.\n",
     "        \"\"\"\n",
     "        return sess.run(self.output, { self.input_state: state })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A novel approach of  using Q network and a target network to learn the best possible action in specific state is mentioned in the paper.\n",
+    "\n",
+    "TO aviod the correlation in the data collected from exploration of enviroment this approach is used. The working of this approach can be understood as following steps:\n",
+    "    \n",
+    "    1. Initially zero matrix for Q matrix and target network matrix is as assumed with size state*actions \n",
+    "    2. The program explores and stores the action, state value and action appllied and the Q matrix is updated.\n",
+    "    3. The above process repeats few times on some interval.\n",
+    "    4. After this specific interval we update the target network.\n",
+    "    5. By choosing to selectively update the target network  we can avoid the correlation in between the data and the program can learn the best possible action."
    ]
   },
   {
@@ -153,7 +206,6 @@
     "            tf.summary.scalar(\"max_q_value\", tf.reduce_max(self.predictions))\n",
     "        ])\n",
     "\n",
-    "\n",
     "    def predict(self, sess, s):\n",
     "        \"\"\"\n",
     "        Predicts action values.\n",
@@ -229,34 +281,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def copy_model_parameters(sess, estimator1, estimator2):\n",
+    "class ModelParametersCopier():\n",
     "    \"\"\"\n",
-    "    Copies the model parameters of one estimator to another.\n",
-    "\n",
-    "    Args:\n",
-    "      sess: Tensorflow session instance\n",
-    "      estimator1: Estimator to copy the paramters from\n",
-    "      estimator2: Estimator to copy the parameters to\n",
+    "    Copy model parameters of one estimator to another.\n",
     "    \"\"\"\n",
-    "    e1_params = [t for t in tf.trainable_variables() if t.name.startswith(estimator1.scope)]\n",
-    "    e1_params = sorted(e1_params, key=lambda v: v.name)\n",
-    "    e2_params = [t for t in tf.trainable_variables() if t.name.startswith(estimator2.scope)]\n",
-    "    e2_params = sorted(e2_params, key=lambda v: v.name)\n",
+    "    \n",
+    "    def __init__(self, estimator1, estimator2):\n",
+    "        \"\"\"\n",
+    "        Defines copy-work operation graph.  \n",
+    "        Args:\n",
+    "          estimator1: Estimator to copy the paramters from\n",
+    "          estimator2: Estimator to copy the parameters to\n",
+    "        \"\"\"\n",
+    "        e1_params = [t for t in tf.trainable_variables() if t.name.startswith(estimator1.scope)]\n",
+    "        e1_params = sorted(e1_params, key=lambda v: v.name)\n",
+    "        e2_params = [t for t in tf.trainable_variables() if t.name.startswith(estimator2.scope)]\n",
+    "        e2_params = sorted(e2_params, key=lambda v: v.name)\n",
     "\n",
-    "    update_ops = []\n",
-    "    for e1_v, e2_v in zip(e1_params, e2_params):\n",
-    "        op = e2_v.assign(e1_v)\n",
-    "        update_ops.append(op)\n",
-    "\n",
-    "    sess.run(update_ops)"
+    "        self.update_ops = []\n",
+    "        for e1_v, e2_v in zip(e1_params, e2_params):\n",
+    "            op = e2_v.assign(e1_v)\n",
+    "            self.update_ops.append(op)\n",
+    "            \n",
+    "    def make(self, sess):\n",
+    "        \"\"\"\n",
+    "        Makes copy.\n",
+    "        Args:\n",
+    "            sess: Tensorflow session instance\n",
+    "        \"\"\"\n",
+    "        sess.run(self.update_ops)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to make the selective actions, an epsilon greedy policy is used for calculating the cost function. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_epsilon_greedy_policy(estimator, nA):\n",
@@ -307,7 +373,7 @@
     "    Q-Learning algorithm for off-policy TD control using Function Approximation.\n",
     "    Finds the optimal greedy policy while following an epsilon-greedy policy.\n",
     "\n",
-    "    Args:\n",
+    "    Arguments:\n",
     "        sess: Tensorflow Session object\n",
     "        env: OpenAI environment\n",
     "        q_estimator: Estimator object used for the q values\n",
@@ -336,17 +402,23 @@
     "\n",
     "    # The replay memory\n",
     "    replay_memory = []\n",
+    "    \n",
+    "    # Make model copier object\n",
+    "    estimator_copy = ModelParametersCopier(q_estimator, target_estimator)\n",
     "\n",
     "    # Keeps track of useful statistics\n",
     "    stats = plotting.EpisodeStats(\n",
     "        episode_lengths=np.zeros(num_episodes),\n",
     "        episode_rewards=np.zeros(num_episodes))\n",
+    "    \n",
+    "    # For 'system/' summaries, usefull to check if currrent process looks healthy\n",
+    "    current_process = psutil.Process()\n",
     "\n",
     "    # Create directories for checkpoints and summaries\n",
     "    checkpoint_dir = os.path.join(experiment_dir, \"checkpoints\")\n",
     "    checkpoint_path = os.path.join(checkpoint_dir, \"model\")\n",
     "    monitor_path = os.path.join(experiment_dir, \"monitor\")\n",
-    "\n",
+    "    \n",
     "    if not os.path.exists(checkpoint_dir):\n",
     "        os.makedirs(checkpoint_dir)\n",
     "    if not os.path.exists(monitor_path):\n",
@@ -376,14 +448,23 @@
     "    state = state_processor.process(sess, state)\n",
     "    state = np.stack([state] * 4, axis=2)\n",
     "    for i in range(replay_memory_init_size):\n",
-    "        # TODO: Populate replay memory!\n",
-    "        pass\n",
+    "        action_probs = policy(sess, state, epsilons[min(total_t, epsilon_decay_steps-1)])\n",
+    "        action = np.random.choice(np.arange(len(action_probs)), p=action_probs)\n",
+    "        next_state, reward, done, _ = env.step(VALID_ACTIONS[action])\n",
+    "        next_state = state_processor.process(sess, next_state)\n",
+    "        next_state = np.append(state[:,:,1:], np.expand_dims(next_state, 2), axis=2)\n",
+    "        replay_memory.append(Transition(state, action, reward, next_state, done))\n",
+    "        if done:\n",
+    "            state = env.reset()\n",
+    "            state = state_processor.process(sess, state)\n",
+    "            state = np.stack([state] * 4, axis=2)\n",
+    "        else:\n",
+    "            state = next_state\n",
+    "\n",
     "\n",
     "    # Record videos\n",
-    "    env= Monitor(env,\n",
-    "                 directory=monitor_path,\n",
-    "                 resume=True,\n",
-    "                 video_callable=lambda count: count % record_video_every == 0)\n",
+    "    # Add env Monitor wrapper\n",
+    "    env = Monitor(env, directory=monitor_path, video_callable=lambda count: count % record_video_every == 0, resume=True)\n",
     "\n",
     "    for i_episode in range(num_episodes):\n",
     "\n",
@@ -402,36 +483,45 @@
     "            # Epsilon for this time step\n",
     "            epsilon = epsilons[min(total_t, epsilon_decay_steps-1)]\n",
     "\n",
-    "            # Add epsilon to Tensorboard\n",
-    "            episode_summary = tf.Summary()\n",
-    "            episode_summary.value.add(simple_value=epsilon, tag=\"epsilon\")\n",
-    "            q_estimator.summary_writer.add_summary(episode_summary, total_t)\n",
-    "\n",
-    "            # TODO: Maybe update the target estimator\n",
+    "            # Maybe update the target estimator\n",
     "            if total_t % update_target_estimator_every == 0:\n",
-    "                pass\n",
+    "                estimator_copy.make(sess)\n",
+    "                print(\"\\nCopied model parameters to target network.\")\n",
     "\n",
     "            # Print out which step we're on, useful for debugging.\n",
     "            print(\"\\rStep {} ({}) @ Episode {}/{}, loss: {}\".format(\n",
     "                    t, total_t, i_episode + 1, num_episodes, loss), end=\"\")\n",
     "            sys.stdout.flush()\n",
     "\n",
-    "            # Take a step in the environment\n",
-    "            # TODO: Implement!\n",
+    "            # Take a step\n",
+    "            action_probs = policy(sess, state, epsilon)\n",
+    "            action = np.random.choice(np.arange(len(action_probs)), p=action_probs)\n",
+    "            next_state, reward, done, _ = env.step(VALID_ACTIONS[action])\n",
+    "            next_state = state_processor.process(sess, next_state)\n",
+    "            next_state = np.append(state[:,:,1:], np.expand_dims(next_state, 2), axis=2)\n",
     "\n",
     "            # If our replay memory is full, pop the first element\n",
     "            if len(replay_memory) == replay_memory_size:\n",
     "                replay_memory.pop(0)\n",
     "\n",
-    "            # TODO: Save transition to replay memory\n",
+    "            # Save transition to replay memory\n",
+    "            replay_memory.append(Transition(state, action, reward, next_state, done))   \n",
     "\n",
     "            # Update statistics\n",
     "            stats.episode_rewards[i_episode] += reward\n",
     "            stats.episode_lengths[i_episode] = t\n",
     "\n",
-    "            # TODO: Sample a minibatch from the replay memory\n",
-    "            # TODO: Calculate q values and targets\n",
-    "            # TODO Perform gradient descent update\n",
+    "            # Sample a minibatch from the replay memory\n",
+    "            samples = random.sample(replay_memory, batch_size)\n",
+    "            states_batch, action_batch, reward_batch, next_states_batch, done_batch = map(np.array, zip(*samples))\n",
+    "\n",
+    "            # Calculate q values and targets\n",
+    "            q_values_next = target_estimator.predict(sess, next_states_batch)\n",
+    "            targets_batch = reward_batch + np.invert(done_batch).astype(np.float32) * discount_factor * np.amax(q_values_next, axis=1)\n",
+    "\n",
+    "            # Perform gradient descent update\n",
+    "            states_batch = np.array(states_batch)\n",
+    "            loss = q_estimator.update(sess, states_batch, action_batch, targets_batch)\n",
     "\n",
     "            if done:\n",
     "                break\n",
@@ -441,16 +531,18 @@
     "\n",
     "        # Add summaries to tensorboard\n",
     "        episode_summary = tf.Summary()\n",
-    "        episode_summary.value.add(simple_value=stats.episode_rewards[i_episode], node_name=\"episode_reward\", tag=\"episode_reward\")\n",
-    "        episode_summary.value.add(simple_value=stats.episode_lengths[i_episode], node_name=\"episode_length\", tag=\"episode_length\")\n",
-    "        q_estimator.summary_writer.add_summary(episode_summary, total_t)\n",
+    "        episode_summary.value.add(simple_value=epsilon, tag=\"episode/epsilon\")\n",
+    "        episode_summary.value.add(simple_value=stats.episode_rewards[i_episode], tag=\"episode/reward\")\n",
+    "        episode_summary.value.add(simple_value=stats.episode_lengths[i_episode], tag=\"episode/length\")\n",
+    "        episode_summary.value.add(simple_value=current_process.cpu_percent(), tag=\"system/cpu_usage_percent\")\n",
+    "        episode_summary.value.add(simple_value=current_process.memory_percent(memtype=\"vms\"), tag=\"system/v_memeory_usage_percent\")\n",
+    "        q_estimator.summary_writer.add_summary(episode_summary, i_episode)\n",
     "        q_estimator.summary_writer.flush()\n",
-    "\n",
+    "        \n",
     "        yield total_t, plotting.EpisodeStats(\n",
     "            episode_lengths=stats.episode_lengths[:i_episode+1],\n",
     "            episode_rewards=stats.episode_rewards[:i_episode+1])\n",
     "\n",
-    "    env.monitor.close()\n",
     "    return stats"
    ]
   },
@@ -469,7 +561,7 @@
     "global_step = tf.Variable(0, name='global_step', trainable=False)\n",
     "    \n",
     "# Create estimators\n",
-    "q_estimator = Estimator(scope=\"q\", summaries_dir=experiment_dir)\n",
+    "q_estimator = Estimator(scope=\"q_estimator\", summaries_dir=experiment_dir)\n",
     "target_estimator = Estimator(scope=\"target_q\")\n",
     "\n",
     "# State processor\n",
@@ -477,14 +569,14 @@
     "\n",
     "# Run it!\n",
     "with tf.Session() as sess:\n",
-    "    sess.run(tf.initialize_all_variables())\n",
+    "    sess.run(tf.global_variables_initializer())\n",
     "    for t, stats in deep_q_learning(sess,\n",
     "                                    env,\n",
     "                                    q_estimator=q_estimator,\n",
     "                                    target_estimator=target_estimator,\n",
     "                                    state_processor=state_processor,\n",
     "                                    experiment_dir=experiment_dir,\n",
-    "                                    num_episodes=10000,\n",
+    "                                    num_episodes=1000,\n",
     "                                    replay_memory_size=500000,\n",
     "                                    replay_memory_init_size=50000,\n",
     "                                    update_target_estimator_every=10000,\n",
@@ -496,6 +588,27 @@
     "\n",
     "        print(\"\\nEpisode Reward: {}\".format(stats.episode_rewards[-1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
